new blog post, add author to each post

--- a/_posts/2023-01-05-handyman.md
+++ b/_posts/2023-01-05-handyman.md
@@ -1,6 +1,7 @@
 ---
 title: handyman
 layout: post
+author: autumn
 ---
 
 met with the handyman today. definitely lots of things to fix up, and he seemed to think that the fence needed to be totally redone... but we could also just patch it if we really wanted to.
